# camera1394

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.rst  manifest.xml  package.xml  rosdep.yaml  stack.xml
cfg/: Camera1394.cfg
src/nodes/: CMakeLists.txt  dev_camera1394.cpp  dev_camera1394.h  driver1394.cpp  driver1394.h  features.cpp  features.h  format7.cpp  node.cpp  nodelet.cpp  trigger.cpp  trigger.h
srv/: GetRegisters.srv  SetRegisters.srv
tests/: README-testing  camera_node_hz.test  camera_nodelet_hz.test  format7_node_hz.test  no_device_node.test  no_device_nodelet.test  sony_format7.yaml  trigger_node.cpp  trigger_node.test  trigger_nodelet.test  unibrain.yaml
